# fastapi_ui_example

./: .gitignore  Makefile  README.md  main.py  maps.yaml  openapi.json  pyproject.toml  setup.sh  streamlit.py
models/: actor.py
services/: actors.py
ui/: package-lock.json  package.json
ui/src/: App.tsx
ui/src/components/: ActorCard.tsx
ui/src/hooks/: useActors.ts
ui/src/types/: actor.ts  api.ts
