[project]
name = "actor-ui-demo"
version = "0.1.0"
description = "FastAPI backend for actor showcase with modern UI"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "pandas>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 